2015-10-23 - 1.1.0:
 - Bump to Mesos 0.24.1-0.2.35.ubuntu1404

2015-10-16 - 1.0.2:
  - Bump to Mesos 0.23.1-0.2.61.ubuntu1404
  - Pin zookeeper

2015-10-07 - 1.0.1:
  - Updated to use Oracle java 8. 