@@ -4,7 +4,7 @@ Base container for all services that require Mesos related depenendancies. Mesos
 
 ##### Version Information:
 
-* **Container Release:** 1.1.0
+* **Container Release:** 1.1.1
 * **Mesos:** 0.24.1-0.2.35.ubuntu1404
 * **Mesos Documentation:** [mesos@4487380](https://github.com/apache/mesos/tree/44873806c2bb55da37e9adbece938274d8cd7c48/docs)
 
