@@ -1,3 +1,6 @@
+2015-11-07 - 1.1.1:
+ - Using new ubuntu-base image to include logrotate support
+
 2015-10-23 - 1.1.0:
  - Bump to Mesos 0.24.1-0.2.35.ubuntu1404
 
